env-setup/kustomize/deployment.yaml
# Copyright 2023 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: apps/v1
kind: Deployment
metadata:
  name: triton-server-deployment
  labels:
    app: triton-server 
spec:
  replicas: 1 
  selector:
    matchLabels:
      app: triton-server 
  template:
    metadata:
      labels:
        app: triton-server 
    spec:
      containers:
        - name: triton-inference-server 
          image: nvcr.io/nvidia/tritonserver:23.01-py3 
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              nvidia.com/gpu: 1
          args: ["tritonserver", "--model-store=gs://jk-triton-repository/model_repository"]
          ports:
            - containerPort: 8000
              name: http
            - containerPort: 8001
              name: grpc
            - containerPort: 8002
              name: metrics
          livenessProbe:
            httpGet:
              path: /v2/health/live
              port: http
          readinessProbe:
            initialDelaySeconds: 5
            periodSeconds: 5
            httpGet:
              path: /v2/health/ready
              port: http
      securityContext:
        runAsUser: 1000
        fsGroup: 1000
